--- a/src/main/webapp/resources/css/monginis.css
+++ b/src/main/webapp/resources/css/monginis.css
@@ -404,7 +404,7 @@ box-shadow:         0px 2px 14px 0px rgba(0, 0, 0, 0.25); margin-bottom:20px;}
     position: relative;
 }
 input[type=radio],
-input[type=checkbox] {display: none;}
+input[type=checkbox] {}
 label:before {
 	content: "";
 	display: inline-block;
