--- a/src/main/webapp/resources/newpos/css/monginis.css
+++ b/src/main/webapp/resources/newpos/css/monginis.css
@@ -1,4 +1,5 @@
 @import url("font-awesome.min.css");
+@import url("jquery.classyscroll.css");
 
 
 
@@ -21,8 +22,8 @@ input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit
 input,textarea,button,select,a,div{-webkit-tap-highlight-color:transparent;outline:none}
 table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
 img{border:0px;max-width:100%;vertical-align:top}
-::-moz-selection{background:#bc5627;color:#fff}
-::selection{background:#bc5627;color:#fff}
+::-moz-selection{background:#ed1c24;color:#fff}
+::selection{background:#ed1c24;color:#fff}
 *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
 :before,:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
 a{text-decoration:none; color:#bc5627;}
@@ -34,19 +35,17 @@ ol,ul,li{margin: 0px;padding: 0px;list-style-type: none;}
 .clr{clear: both;}
 
 .wrapper{width: 100%;}
-
-
-
-
 header{width: 100%; background: #FFF; padding: 0;}
 
 .logo{float: left; padding: 10px 20px;}
 .drop_menu{float: right; margin: 14px 14px 0 0;}
 /*Styling Selectbox*/
 .dropdown {width: 200px; background:url(../images/ddarow.png) no-repeat right top; background-position:93% 16px; display: inline-block; background-color: #ecf0f5; transition: all .5s ease; position: relative; font-size: 14px; color: #000; height: 100%; text-align: left}
+.dropdown.popup_drop{width: 100%; padding: 6px 12px; border: 1px solid #d2d6de; background:url(../images/ddarow.png) no-repeat right top; background-position:97% 12px; display: inline-block; background-color: #FFF; transition: all .5s ease; position: relative; font-size: 12px; color: #333; height: 100%; text-align: left}
+.dropdown.popup_drop .select {padding: 0;}
 .dropdown .select {cursor: pointer; display: block; padding: 10px}
 .dropdown .select > i {font-size: 13px; color: #888; cursor: pointer; transition: all .3s ease-in-out; float: right; line-height: 20px}
-.dropdown .dropdown-menu {position: absolute; background-color: #fff; width: 100%; left: 0; margin-top: 1px; box-shadow: 0 2px 3px rgb(204, 204, 204); overflow: hidden; display: none; max-height: 144px; overflow-y: auto; z-index: 9}
+.dropdown .dropdown-menu {position: absolute; background-color: #fff; width: 100%; left: 0; margin-top: 1px; box-shadow: 0 2px 3px rgb(204, 204, 204); overflow: hidden; display: none; max-height: 144px; overflow-y: auto; z-index:20}
 .dropdown .dropdown-menu li {padding: 10px; transition: all .2s ease-in-out; cursor: pointer}
 .dropdown .dropdown-menu {padding: 0; list-style: none}
 .dropdown .dropdown-menu li:hover {background-color: #ed1c24; color: #FFF; text-decoration:none;}
@@ -86,7 +85,8 @@ table.pending_tab th{text-transform: uppercase; font-size: 14px; color: #333; te
 table.pending_tab td {text-align: left; padding: 8px; border: 1px solid #ddd; font-size: 15px;}
 table.pending_tab tr:nth-child(even){background-color: #f2f2f2}
 
-.total_table_one{height: 300px; overflow-y: scroll;}
+.total_table_one{/*height: 263px; overflow-y: scroll;*/ display: block;}
+.scrollbars{height: 283px; width: 100%;}
 .total_table_one table {border-collapse: collapse; border-spacing: 0; width: 100%; border: 1px solid #ddd; background: #FFF;}
 .total_table_one th{text-transform: uppercase; font-size: 14px; color: #333; text-align: left; padding: 8px; border: 1px solid #ddd;}
 .total_table_one td {text-align: left; padding: 8px; border: 1px solid #ddd; font-size: 15px;}
@@ -152,16 +152,18 @@ input[type=radio]:checked ~ .check::before{background: #ed1c24;}
 input[type=radio]:checked ~ label{color: #ed1c24;}
 
 
-.cat_bx_one{overflow-y:none; overflow-x:scroll; width: 100%; border: 2px solid #cccccc; white-space: nowrap; }
-.category_list{padding: 10px; width: 150%; display: inline-block;}
+.cat_bx_one{ width: 100%; border: 2px solid #cccccc; white-space: nowrap; }
+.category_list{padding: 10px; width: 100%; display: inline-block;}
+.category_scrollbars{height: 135px; width: 100%;}
+
 .category_list ul{margin: 0px; padding: 0px;}
 .category_list ul li{list-style-type: none; float: left; margin: 5px; border: 3px solid #ecf0f5;}
 .category_list ul li img{display: block; width: 100px; height: 100px; margin: 0 auto;}
 .category_list ul li span{display: block; background: #e5e5e5; color: #333333; text-align: center; padding: 10px; font-size: 14px;}
 .category_list ul li:hover{ border: 3px solid #cccccc;}
 
-.cat_one {margin: 5px; border: 3px solid #ecf0f5; float: left; width: 111px; background: #FFF; position: relative;}
-.cat_one.cat{margin: 3px;}
+.cat_one {margin: 4px; border: 3px solid #ecf0f5; float: left; width: 111px; background: #FFF; position: relative;}
+.cat_one.cat{margin: 4px;}
 .cat_one p{background: #ed1c24; color: #FFF; font-size: 10px; font-weight: 600; border-radius: 50%; position: absolute; right: 6px; top: 6px; width: 20px; height: 20px; line-height: 20px; text-align: center;}
 .cat_one img{display: block; width: 80px; height: 80px; margin: 0 auto;}
 .cat_one span{display: block; background: #e5e5e5; color: #333333; text-align: center; padding: 10px; font-size: 14px; text-overflow:ellipsis;vertical-align:middle;white-space:nowrap;overflow:hidden;}
@@ -170,7 +172,16 @@ input[type=radio]:checked ~ label{color: #ed1c24;}
 .cat_list_bx{ margin: 25px 0 0 0;}
 .input_cat{background: #FFF url(../images/srach_icn.png) no-repeat right top; padding: 4px 35px 4px 8px; font-size: 14px; border: 0; background-position: 95% 6px;}
 .cat_srach{display: inline-block; text-align: right; width: 100%; margin: 0 0 10px 0;}
-.cat_list{padding: 10px; width: 100%; display: inline-block;  border: 2px solid #cccccc; height: 300px; overflow-y: scroll; overflow-x: hidden;}
+.cat_list{padding: 10px; width: 100%; display: inline-block;  border: 2px solid #cccccc; position: relative;}
+.carlist_scrollbars{height: 300px; width: 100%;}
+
+.add_row{display: inline-block; width: 100%; margin: 0 0 15px 0;}
+.add_row_l{float: left; width: 48%;}
+.add_row_r{float: right; width: 48%;}
+span.add_txt{display: block; font-size: 14px; font-weight: 700; text-align: left; margin: 0 0 8px 0;}
+.add_row.add_row_marg{margin-bottom: 0;}
+.category_popup{background: #FFF; width: 30%; margin: 30px auto 0 auto; float: right; right: 14%; top: 50%;}
+
 
 @media screen and (max-width:1280px){}
 @media screen and (max-width:1100px){}
