--- a/src/main/webapp/resources/css/monginis.css
+++ b/src/main/webapp/resources/css/monginis.css
@@ -84,7 +84,7 @@ box-shadow:         0px 2px 14px 0px rgba(0, 0, 0, 0.25);}
 }
 .microsoft {position: relative;}
 
-.latestNews{ margin-bottom:20px; width:100%; float:left; padding-left:165px; padding-right:20px; position:relative; height:44px; line-height:44px; background:#ec268f;}
+.latestNews{ margin-bottom:20px; width:100%; float:left; padding-left:165px; padding-right:20px; position:relative; height:44px; line-height:44px; background:#ce5553;}
 .latestNewsTitle{ line-height:44px;width:145px; position:absolute; left:0px; top:0px; height:44px; background:#343690; text-align:center; font-size:20px; color:#fff;}
 
 .topBarLog{ float:right; padding:10px 0px 10px 20px; font-size:14px; color:#fff;}
@@ -94,7 +94,7 @@ box-shadow:         0px 2px 14px 0px rgba(0, 0, 0, 0.25);}
 .positionR{ position:relative;}
 .positionA{ position:absolute;}
 .slideposi{ position:relative; z-index:5;}
-.logoBarbg{ background:#fff; height:121px; border-bottom:1px solid #ec268f; padding:0px 20px; position:absolute; top:0px; left:0px; right:0px;}
+.logoBarbg{ background:#fff; height:60px; border-bottom:1px solid #ec268f; padding:0px 20px; position:absolute; top:0px; left:0px; right:0px;}
 .logoBarLeft{ float:left; padding:6px 0px;}
 .logoBarLeft a{ display:block; text-decoration:none; border:none;}
 .logoBarRight{ float:right;padding:40px 0px 40px 0px;}
@@ -112,7 +112,7 @@ box-shadow:         0px 2px 14px 0px rgba(0, 0, 0, 0.25);}
 -ms-border-radius:50%;
 border-radius:50%;}
 
-.sidebarOuter{ position:fixed; z-index:0; left:0px; top:0px; bottom:0px; width:130px; background:#ec268f; height:100%;box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px, rgba(0, 0, 0, 0.2) 0px 1px 5px 0px;}
+.sidebarOuter{ position:fixed; z-index:0; left:0px; top:0px; bottom:0px; width:130px; background:#ce5553; height:100%;box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px, rgba(0, 0, 0, 0.2) 0px 1px 5px 0px;}
 .sidebarhome{float:left; width:130px; position:absolute; left:0px; z-index:999;}
 .sidebarhome ul{ margin:0px; padding:66px 0px 0px 0px; list-style-type:none; width:100%; float:left;}
 .sidebarhome li{ margin:0px; padding:0px; list-style-type:none; width:100%; float:left; position:relative; display:table; box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px, rgba(0, 0, 0, 0.2) 0px 1px 5px 0px;}
@@ -125,7 +125,7 @@ border-radius:50%;}
 .sidebarhome .title{ width:100%; float:left;}
 .sidebarright{width:100%;float:left;padding-left:170px;padding-top:30px;position:relative;padding-right:30px; z-index:1;}
 .pageTitle{ width:100%; float:left; text-align:left; font-size:24px; color:#333; padding-bottom:25px;}
-.pageTitle span{ color:#ec268f;}
+.pageTitle span{ color:#ada330;}
 .pageTitle2{ width:100%; float:left; text-align:left; font-size:18px; color:#333; padding-bottom:20px;}
 .ordertop{float:right;}
 
@@ -363,7 +363,7 @@ a.saveOrder:hover{background:#343690;}
 .fileUpload input.upload {position: absolute;top: 0;right: 0;margin: 0;padding: 0;cursor: pointer;opacity: 0;
 filter: alpha(opacity=0); width:100%; height:33px;}
 .messages{ width:100%; float:left; margin:3px 0px; padding:8px; text-align:center; font-size:16px;}
-.messagesErr{ border:1px solid #e3c1c5; color:#e32139; background:#ffeff1;}
+.messagesErr{ border:1px solid #e3c1c5; color:#e32139; background:#f7e8b1;}
 .messagesSuccess{ border:1px solid #c0e6bb; color:#1a9502; background:#f5fff3;}
 .messagesInfo{ border:1px solid #bfdfff; color:#3f9eff; background:#e7f3ff;}
 
@@ -373,7 +373,7 @@ filter: alpha(opacity=0); width:100%; height:33px;}
 .loginInner h2{width:100%; float:left; padding-bottom:25px; text-align:center; color:#444; font-size:18px;}
 .loginInner h3{width:100%; float:left; padding:10px; text-align:center; color:#444; font-size:18px;}
 
-.loginInner h2 span{ display:block; color:#ec268f; font-size:36px;}
+.loginInner h2 span{ display:block; color:#d04b22; font-size:36px;}
 .loginBox{ width:100%; float:left; background:#f6f6f6; border:2px solid #ccc; padding:40px 30px 20px 30px;-webkit-border-radius:10px;-moz-border-radius:10px;-o-border-radius:10px;-ms-border-radius:10px;border-radius:10px; margin-top:40px; position:relative;
 border:5px solid #fff;
 -webkit-box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.25);
@@ -391,7 +391,7 @@ box-shadow:         0px 2px 14px 0px rgba(0, 0, 0, 0.25); margin-bottom:20px;}
 .texboxlogin:focus, input:focus{outline: 0;}
 .texboxlogin *:focus {outline: 0;}
 @media screen and (-webkit-min-device-pixel-ratio:0) {::i-block-chrome, .texboxitemcode{ line-height:16px;}}
-.buttonlogin{background:#ec268f;text-align:center; margin:0px; padding:8px 15px;cursor:pointer;border:2px solid #ec268f; color:#fff; font-size:16px; width:100%; line-height:20px; font-weight:bold; -webkit-border-radius:5px;-moz-border-radius:5px;
+.buttonlogin{background:#d63a38;text-align:center; margin:0px; padding:8px 15px;cursor:pointer;border:2px solid #d63a38; color:#fff; font-size:16px; width:100%; line-height:20px; font-weight:bold; -webkit-border-radius:5px;-moz-border-radius:5px;
 -o-border-radius:5px;-ms-border-radius:5px;border-radius:5px;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
 .buttonlogin:hover{background:#343690;border:2px solid #343690;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
 .logintexboxleft{ float:left; text-align:left; font-size:13px; color:#343690;}
