--- a/src/main/webapp/resources/newpos/css/monginis.css
+++ b/src/main/webapp/resources/newpos/css/monginis.css
@@ -1,5 +1,8 @@
 @import url("font-awesome.min.css");
 @import url("jquery.classyscroll.css");
+@import url("jquery.mCustomScrollbar.css");
+@import url("style.css");
+@import url("component.css");
 
 
 
@@ -20,7 +23,7 @@ input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-ou
 input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}
 input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}
 input,textarea,button,select,a,div{-webkit-tap-highlight-color:transparent;outline:none}
-table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
+table{border-collapse:collapse;border-spacing:0}/*td,th{padding:0}*/
 img{border:0px;max-width:100%;vertical-align:top}
 ::-moz-selection{background:#ed1c24;color:#fff}
 ::selection{background:#ed1c24;color:#fff}
@@ -88,7 +91,7 @@ table.pending_tab tr:nth-child(even){background-color: #f2f2f2}
 .total_table_one{/*height: 263px; overflow-y: scroll;*/ display: block;}
 .scrollbars{height: 283px; width: 100%;}
 .total_table_one table {border-collapse: collapse; border-spacing: 0; width: 100%; border: 1px solid #ddd; background: #FFF;}
-.total_table_one th{text-transform: uppercase; font-size: 14px; color: #333; text-align: left; padding: 8px; border: 1px solid #ddd;}
+.total_table_one th{text-transform: uppercase; font-size: 14px; color: #FFF; text-align: left; padding: 8px; border: 1px solid #ddd;}
 .total_table_one td {text-align: left; padding: 8px; border: 1px solid #ddd; font-size: 15px;}
 .total_table_one tr:nth-child(even){background-color: #f5f5f5}
 
@@ -165,7 +168,7 @@ input[type=radio]:checked ~ label{color: #ed1c24;}
 .cat_one {margin: 4px; border: 3px solid #ecf0f5; float: left; width: 111px; background: #FFF; position: relative;}
 .cat_one.cat{margin: 4px;}
 .cat_one p{background: #ed1c24; color: #FFF; font-size: 10px; font-weight: 600; border-radius: 50%; position: absolute; right: 6px; top: 6px; width: 20px; height: 20px; line-height: 20px; text-align: center;}
-.cat_one img{display: block;  height: 80px; margin: 0 auto;}  /* width: 80px; */
+.cat_one img{display: block; height: 80px; margin: 0 auto;}
 .cat_one span{display: block; background: #e5e5e5; color: #333333; text-align: center; padding: 10px; font-size: 14px; text-overflow:ellipsis;vertical-align:middle;white-space:nowrap;overflow:hidden;}
 .cat_one:hover{border: 3px solid #cccccc;}
 
@@ -173,7 +176,7 @@ input[type=radio]:checked ~ label{color: #ed1c24;}
 .input_cat{background: #FFF url(../images/srach_icn.png) no-repeat right top; padding: 4px 35px 4px 8px; font-size: 14px; border: 0; background-position: 95% 6px;}
 .cat_srach{display: inline-block; text-align: right; width: 100%; margin: 0 0 10px 0;}
 .cat_list{padding: 10px; width: 100%; display: inline-block;  border: 2px solid #cccccc; position: relative;}
-.carlist_scrollbars{height: 300px; width: 100%;}
+.carlist_scrollbars{height: 320px; width: 100%;}
 
 .add_row{display: inline-block; width: 100%; margin: 0 0 15px 0;}
 .add_row_l{float: left; width: 48%;}
@@ -181,6 +184,170 @@ input[type=radio]:checked ~ label{color: #ed1c24;}
 span.add_txt{display: block; font-size: 14px; font-weight: 700; text-align: left; margin: 0 0 8px 0;}
 .add_row.add_row_marg{margin-bottom: 0;}
 .category_popup{background: #FFF; width: 30%; margin: 30px auto 0 auto; float: right; right: 14%; top: 50%;}
+
+.bx_tabs{display: inline-block; width: 100%; margin: 0 0 15px 0;}
+.bx_tabs ul{margin: 0px; padding: 0px;}
+.bx_tabs ul li{list-style-type: none; display: inline-block; font-size: 14px; margin: 0 0 0 4px;}
+.bx_tabs ul li a{background: #fef200; color: #333; font-weight: 600; text-decoration:none; padding: 8px 15px; text-transform: uppercase; display: block; border-radius: 3px; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.bx_tabs ul li a:hover,.bx_tabs ul li a.act{background: #ed1c24; color: #FFF; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+
+
+/*---------- LOGIN PAGE CSS ----------*/
+.login_page{background: #FFF; padding: 0px; margin: 0px; height: 100%; width: 100%;}
+.login_bx{width: 360px; margin: 0 auto; padding: 110px 0;}
+.lgn_head{text-align: center; color: #fff200; font-size: 35px; margin: 0 0 30px 0; font-weight: 300;}
+.lgn_head span{font-weight: 600;}
+.lgn_container{background: #f4f4f4; border: 1px solid #dddddd; padding: 20px; color: #666;}
+.lgn_account{font-size: 14px; margin: 0 0 15px 0; text-align: center;}
+.lgn_row{margin: 0 0 15px 0; display: inline-block; width: 100%; position: relative;}
+.lgn_row img{position: absolute; top: 9px; left: 11px;}
+.lgn_input{width: 100%; background: #FFF; border: 1px solid #d2d6de; padding:7px 12px 7px 35px; color: #333; font-size: 14px;}
+.lgn_input:focus{background: #e8f0fe; border: 1px solid #3c8dbc;}
+.lgn_btn{margin: 0 0 25px 0;}
+.signin_btn{border: 1px solid #e7161e; width: 100%; padding: 7px 12px; background: #ed1c24; color: #FFF; font-size: 14px; text-transform: uppercase; font-weight: 600; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s; transition: all ease 0.5s;}
+.signin_btn:hover{background: #fff200; color: #333; border: 1px solid #ece000; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.lgn_frgt{font-size: 14px; line-height: 22px; margin: 0 0 7px 0;}
+.lgn_frgt a{color: #ed1c24;}
+/*checkbox css*/
+/* The container */
+.container {display: block; position: relative; padding-left: 26px; margin-bottom: 12px; cursor: pointer; font-size: 14px; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
+/* Hide the browser's default checkbox */
+.container input {position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0;}
+/* Create a custom checkbox */
+.checkmark {position: absolute; top: 0; left: 0; height: 18px; width: 18px; background-color: #FFF; border: 1px solid #d2d6de;}
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {background-color: #d2d6de;}
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {background-color: #ed1c25; border: 1px solid #ed1c25;}
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {content: ""; position: absolute; display: none;}
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {display: block;}
+/* Style the checkmark/indicator */
+.container .checkmark:after {left: 5px; top: 2px; width: 6px; height: 9px; border: solid white; border-width: 0 3px 3px 0; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg);}
+
+
+/*top menu css start here*/
+.top_menu{display: inline-block; width: 100%;}
+.top_menu ul{margin: 0px; padding: 0px;}
+.top_menu ul li{list-style-type: none; float: left;}
+.top_menu ul li i{display: block; text-align: center; width: 100%; margin: 0 0 8px 0; font-size: 18px;}
+.top_menu ul li a{background: #ed1c24; padding: 20px 15px 25px 20px; display: block; border-right: 1px solid #e1001b; color: #FFF; font-size: 14px;}
+.top_menu ul li a:hover{background: #fff200; color: #333;}
+
+/*---------- order booking page css start here ----------*/
+.listarea{ width:100%; float:left; /*padding:0px 10%;*/}
+.listarea ul{ width:100%; float:left; margin:0px; padding:0px;}
+.listarea li{ width:33.33%; float:left; margin:0px; padding:15px;}
+.listareaBox{width:100%; float:left; text-align:left; background:#ed1c24; padding:0 0 0 78px; position:relative; height:71px /*79px*/; color:#fff; border:3px solid #ed1c24;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.listareaBox:hover{ background:#fff;border:3px solid #dfdfdf;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.listareaBox img{ position:absolute; left: 0; top: 0; /*left:6px; top:4px;*/}
+.listareaBoximg{position:absolute; left:6px; top:4px;}
+.listareaBox h2{ width:100%; float:left; margin:6px 0px 4px 0 /*4px 0px*/; padding-top:6px; font-size:18px; line-height:18px;color:#fff;}
+.listareaBox h3{ width:100%; float:left; font-size:13px; padding-bottom:6px;color:#fff;}
+.listareaBoxdown{ float:left; padding-right:13px;font-size:13px;}
+.listareaBoxdown a{ text-decoration:none;font-size:13px; color:#fff; padding:0px!important;}
+.listareaBoxdown i{ margin-left:4px;}
+.listareaBox:hover h2{ color:#ed1c24;}
+.listareaBox:hover h3{ color:#ed1c24;}
+.listareaBox:hover a{ color:#ed1c24;}
+.listareaBox:hover a:hover{ color:#ed1c24;}
+
+.listareaBlue{ width:100%; float:left; padding:0px 10%;}
+.listareaBlue ul{ width:100%; float:left; margin:0px; padding:0px;}
+.listareaBlue li{ width:33.33%; float:left; margin:0px; padding:15px;}
+.listareaBoxBlue{width:100%; float:left; text-align:left; background:#343690; padding-left:78px; position:relative; height:79px;
+-webkit-border-radius:40px;-moz-border-radius:40px;-o-border-radius:40px;-ms-border-radius:40px;border-radius:40px; color:#fff; border:3px solid #343690;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.listareaBoxBlue:hover{ background:#fff;border:3px solid #dfdfdf;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.listareaBoxBlue img{ position:absolute; left:6px; top:4px;}
+.listareaBoximgBlue{position:absolute; left:6px; top:4px;}
+.listareaBoxBlue h2{ width:100%; float:left; margin:4px 0px; padding-top:6px; font-size:18px; line-height:18px;color:#fff;}
+.listareaBoxBlue h3{ width:100%; float:left; font-size:13px; padding-bottom:6px;color:#fff;}
+.listareaBoxdownBlue{ float:left; padding-right:13px;font-size:13px;}
+.listareaBoxdownBlue a{ text-decoration:none;font-size:13px; color:#fff; padding:0px!important;}
+.listareaBoxdownBlue i{ margin-left:4px;}
+.listareaBoxBlue:hover h2{ color:#343690;}
+.listareaBoxBlue:hover h3{ color:#343690;}
+.listareaBoxBlue:hover a{ color:#343690;}
+.listareaBoxBlue:hover a:hover{ color:#ec268f;}
+
+.listareaBoximg{ position:absolute; left:0px; top:0px; width:65px; height:65px; padding:0px!important;}
+.listareaBoximg img:last-child{/*display:none*/}
+.listareaBox:hover .listareaBoximg img:first-child{display:none}
+.listareaBox:hover .listareaBoximg img:last-child{display:inline-block}
+
+
+.logout_btn{float: right; margin: 10px 15px 0 15px;}
+.logout_btn a{color: #333; font-size: 14px; text-transform: uppercase; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.logout_btn a:hover{color: #ed1c24; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+
+.page_head{display: block; margin: 0 0 15px 0;}
+.page_title{float: left; font-size: 24px; color: #333; font-weight: 500;}
+.page_bread{float: right; margin: 5px 0 0 0;}
+.page_bread ul{margin: 0px; padding: 0px;}
+.page_bread ul li{list-style-type: none; display: inline-block; margin: 0 0 0 15px; font-size: 14px;}
+.page_bread ul li a{color: #333;}
+.page_bread ul li.active {color: #777;}
+
+.quick_links{background: #FFF; border-top: 3px solid #ffeb00; border-radius: 3px; padding: 15px; margin: 0 0 15px 0;}
+.bx_title{font-size: 18px; display: inline-block; width: 100%; margin: 0 0 15px 0; color: #333;}
+.quick_links ul{margin: 0px; padding: 0px;}
+.quick_links ul li{list-style-type: none; display: inline-block; margin: 0 0 0 10px; font-size: 14px;}
+.quick_links ul li a{background: #f4f4f4; border: 1px solid #dddddd; display: block; width: 90px; height: 73px; padding: 15px 5px; color: #666; text-overflow: ellipsis; vertical-align: middle; white-space: nowrap; overflow: hidden; text-align: center; border-radius: 3px; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.quick_links ul li a i{display: block; margin: 0 0 5px 0; text-align: center; font-size: 19px;}
+.quick_links ul li a:hover{border: 1px solid #aaaaaa; color: #444; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+
+.charts_bx{display: block; margin: 0 0 15px 0;}
+.chart_l{float: left; width: 68%; background: #FFF; border-radius:3px; padding: 15px; border-top: 3px solid #ffeb00;}
+.chart_r{float: right; width: 30%; background: #FFF; border-radius:3px; padding: 15px; border-top: 3px solid #ffeb00;}
+
+.sweet_list{display: block;}
+.sweet_list ul {margin: 0px; padding: 0px;}
+.sweet_list ul li{list-style-type: none; margin: 4px; border: 3px solid #ecf0f5; float: left; height: 111px; display: table; width: 111px; background: #FFF; position: relative; border: 3px solid #FFF;}
+.sweet_list ul li:hover{border: 3px solid #CCC;}
+.sweet_one{display: table-cell; vertical-align: middle; text-align: center; font-size: 14px; font-weight: 400; line-height: 18px; padding: 5px; text-transform: uppercase;}
+.sweet_one p{background: #ed1c24; color: #FFF; font-size: 10px; font-weight: 600; border-radius: 50%; position: absolute; right: 6px; top: 6px; width: 20px; height: 20px; line-height: 20px; text-align: center;}
+.sweet_one span{font-size: 11px; text-transform: uppercase; font-weight: 600; position: absolute; left: 5px; bottom: 5px; color: #ed1c24;}
+.sweet_one a,.sweet_one span a{color: #333; display: block; font-weight: 600;}
+
+.switch_row{background: #FFF; padding: 15px; margin: 0 0 15px 0;}
+.switch_one{float: left; width: 35%; margin: 0 3% 0 0;}
+.add_txt_l{float: left; width: 30%; font-size: 14px; font-weight: 700; text-align: left; margin: 5px 0 0 0;}
+.add_drop_m{float: left; width: 60%;}
+.add_drop_r{float: left; width: 10%; text-align: center;}
+.delivery_inpt{width: 70%; float: left;}
+
+.switch_last{float: left; width: 24%;}
+/*switch css*/
+.switch {position: relative; display: inline-block; width: 57px; height: 28px;}
+.switch input { opacity: 0; width: 0; height: 0;}
+.slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0;bottom: 0; background-color: #ccc; -webkit-transition: .4s; transition: .4s;}
+.slider:before {position: absolute; content: ""; height: 20px; width: 20px; left: 4px; bottom: 4px; background-color: white; -webkit-transition: .4s; transition: .4s;}
+input:checked + .slider {background-color: #ed1c24;}
+input:focus + .slider {box-shadow: 0 0 1px #ed1c24;}
+input:checked + .slider:before {-webkit-transform: translateX(26px); -ms-transform: translateX(26px); transform: translateX(26px);}
+/* Rounded sliders */
+.slider.round {border-radius: 34px;}
+.slider.round:before {border-radius: 50%;}
+
+.advance_tabs{border-bottom: 1px solid #d7dde6;}
+.advance_tabs ul{margin: 0px; padding: 0px;}
+.advance_tabs ul li{list-style-type: none; float: left; margin: 0 5px 0 0;}
+.advance_tabs ul li a{padding: 10px 20px; background: #e2d900; color: #333; font-size: 14px; text-transform: uppercase; font-weight: 600; border-radius: 3px 3px 0 0; display: block; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.advance_tabs ul li a:hover,.advance_tabs ul li a.act{color: #FFF; background: #ed1c24; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+
+.compo th,.compo td{padding: 10px; font-size: 14px; color: #333;}
+.compo th{color: #FFF; text-transform: uppercase;}
+.input_tab{font-size: 14px; font-weight: 400; color: #333; padding: 2px 10px; border: 1px solid #d2d6de; width: 30%;}
+.input_tab:focus{border: 1px solid #3c8dbc;}
+.input_tab *:focus {border: 1px solid #3c8dbc;}
+
+.sticky_table{margin: 0 0 15px 0;}
+.scroll_one{height: 400px; width: 100%;}
+.total_amt{text-align: right; float: left; font-size: 14px; font-weight: 700; color: #333; margin: 4px 0 0 0;}
+.total_amt span{margin: 0 0 0 25px; color: #ed1c24;}
+.save_bt{float: right; margin: 0 0 0 15px; background: #fcf300; color: #333; padding: 5px 15px; border-radius: 3px; font-size: 14px; font-weight: 600; display: block; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.save_bt:hover{background: #ed1c24; color: #FFF; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
 
 
 @media screen and (max-width:1280px){}
