--- a/src/main/webapp/resources/newpos/css/monginis.css
+++ b/src/main/webapp/resources/newpos/css/monginis.css
@@ -168,7 +168,7 @@ input[type=radio]:checked ~ label{color: #ed1c24;}
 .cat_one {margin: 4px; border: 3px solid #ecf0f5; float: left; width: 111px; background: #FFF; position: relative;}
 .cat_one.cat{margin: 4px;}
 .cat_one p{background: #ed1c24; color: #FFF; font-size: 10px; font-weight: 600; border-radius: 50%; position: absolute; right: 6px; top: 6px; width: 20px; height: 20px; line-height: 20px; text-align: center;}
-.cat_one img{display: block; height: 80px; margin: 0 auto;}
+.cat_one img{display: block; width: 80px; height: 80px; margin: 0 auto;}
 .cat_one span{display: block; background: #e5e5e5; color: #333333; text-align: center; padding: 10px; font-size: 14px; text-overflow:ellipsis;vertical-align:middle;white-space:nowrap;overflow:hidden;}
 .cat_one:hover{border: 3px solid #cccccc;}
 
@@ -348,6 +348,36 @@ input:checked + .slider:before {-webkit-transform: translateX(26px); -ms-transfo
 .total_amt span{margin: 0 0 0 25px; color: #ed1c24;}
 .save_bt{float: right; margin: 0 0 0 15px; background: #fcf300; color: #333; padding: 5px 15px; border-radius: 3px; font-size: 14px; font-weight: 600; display: block; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
 .save_bt:hover{background: #ed1c24; color: #FFF; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+
+/*--------- calculator pop up css start here -----------*/
+.add_customer.calcy{width: 48%;}
+.calcy_bx{padding: 15px; border-bottom: 1px solid #f4f4f4;}
+.calcy_1{float: left; width: 48%;}
+.calculator_bx{background: #ed1c24; padding: 15px;}
+.cal_quan{margin: 0 0 10px 0;}
+.qty_l{float: left; width: 15%; font-size: 14px; font-weight: 600; color: #FFF; margin: 6px 0 0 0;}
+.qty_m{float: left; width: 70%; margin: 0 2% 0 0;}
+.qty_one{width: 100%; border: 0; background: #FFF; padding: 5px; color: #333; font-weight: 600;}
+.qty_r{float: left; width: 13%;}
+.go_btn{background: #fef200 url(../images/back_arrow.png) no-repeat center center; width: 100%; padding: 0; height: 30px; border: 0; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.go_btn:hover{background: #e2d700 url(../images/back_arrow.png) no-repeat center center; color: #333; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.calc_no{display: inline-block; width: 100%;}
+.calc_no_l{float: left; width:75%;}
+.calc_no_l ul{margin: 0px; padding: 0px;}
+.calc_no_l ul li{list-style-type: none; float: left; padding: 2px; width: 33.333%;}
+.calc_no_l ul li a{background: #fef200; display: block; text-align: center; color: #333; font-size: 16px; padding: 13px 0; font-weight: 600;
+-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.calc_no_l ul li a:hover{background: #e2d700; color: #333; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.calc_no_r{float: right; width: 24%; margin: 2px 0 0 0;}
+.calc_no_r a{background: #fef200; display: block; text-align: center; color: #333; font-size: 16px; padding: 13px 0; font-weight: 600; vertical-align: middle;
+    line-height: 117px;
+    width: 100%;
+    padding: 80px 0 0 0;
+-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.calc_no_r a:hover{background: #e2d700; color: #333; -webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+
+.calcy_2{float: right; width: 48%;}
+
 
 
 @media screen and (max-width:1280px){}
