--- a/src/main/webapp/resources/css/jquery-ui.css
+++ b/src/main/webapp/resources/css/jquery-ui.css
@@ -385,6 +385,8 @@ button.ui-button::-moz-focus-inner {
 	text-align: center;
 	font-weight: bold;
 	border: 0;
+	background-color: #fae939;
+	color:#000000;
 }
 .ui-datepicker td {
 	border: 0;
