--- a/src/main/webapp/resources/css/monginis.css
+++ b/src/main/webapp/resources/css/monginis.css
@@ -17,7 +17,7 @@ src:url('../font/MyriadPro-Regular.woff2') format('woff2'),
     url('../font/MyriadPro-Regular.svg#MyriadPro-Regular') format('svg'),
     url('../font/MyriadPro-Regular.eot?#iefix') format('embedded-opentype');font-weight:normal;font-style:normal;}
 
-body{margin:0px;padding:0px;font-family:'MyriadPro-Regular'!important;color:#696969;font-size:13px; background:#fff;}
+body{margin:0px;padding:0px;font-family:'MyriadPro-Regular'!important;color:#696969;font-size:13px; background:#ecf0f5;}
 html {-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
 img{border:0px; max-width:100%;}
 p{ margin:0px; padding:0px;}
@@ -124,13 +124,13 @@ border-radius:50%;}
 .sidebarhome .img img{ max-width:100%;}
 .sidebarhome .title{ width:100%; float:left;}
 .sidebarright{width:100%;float:left;padding-left:33px;padding-top:30px;position:relative;padding-right:30px; z-index:1;}
-.pageTitle{ width:100%; float:left; text-align:left; font-size:24px; color:#333; padding-bottom:25px;}
+.pageTitle{ width:100%; float:left; text-align:left; font-size:24px; color:#25230c; padding-bottom:25px;}
 .pageTitle span{ color:#ada330;}
 .pageTitle2{ width:100%; float:left; text-align:left; font-size:18px; color:#333; padding-bottom:20px;}
 .ordertop{float:right;}
 
 .orderTable{ width:100%; float:left; padding:27px; text-align:left; border:1px solid #ccc;}
-.table .bgpink{ background:#ec268f!important; color:#fff !important; font-size:18px;}
+.table .bgpink{ background:#ed3f3c!important; color:#fff !important; font-size:18px;}
 .table td{ padding:8px 13px; text-align:center;}
 .table td:nth-child(1){ text-align:left;}
 .table td:nth-child(2){ text-align:left;}
@@ -153,7 +153,7 @@ table.responsive-table.signle_table{margin:0;}
 .ordercloser2{ width:25%; float:left;color:#333; font-size:14px; min-height:25px; line-height:25px; text-align:left;}
 .ordercloser2 span{ font-size:24px; margin-left:-3px;}
 .ordermto20px{ margin-top:20px; width:100%; float:left;}
-.ordermto2px{ margin-top:2px; width:100%; float:left;}
+.ordermto2px{ margin-top:11px; width:100%; float:left;}
 
 .order-price{ width:75%; float:left; color:#333; font-size:16px; text-align:right; padding-right:15px; min-height:33px; line-height:33px;} 
 
@@ -448,7 +448,7 @@ input[type=checkbox]:checked + label:before {
 
 table.responsive-table {width:100%; border-collapse: collapse; overflow-x: auto; margin: 1.5em 0; background-color: transparent;}
 .responsive-table th{padding: 8px 3px; vertical-align: top; background: #ed3f3c !important; color: #fff !important; font-size: 16px;}
-.responsive-table tr:nth-child(2n+1) {background: #e1e1e1;}
+.responsive-table tr:nth-child(2n+1) {background: #fffda6;}
 .responsive-table td{text-align: right; padding: 10px; font-size: 18px;}
 #insertItemButton,#printExBill {margin: 0 0 15px 0; }
 
@@ -639,7 +639,46 @@ table.responsive-table{display: block;}
 #datepicker{margin: 0 0 15px 0;}
 .buttonsaveorder{margin: 8px 0;}
 }
-
+#button {
+  display: inline-block;
+  background-color: #FF9800;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+#button::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+#button:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+#button:active {
+  background-color: #555;
+}
+#button.show {
+  opacity: 1;
+  visibility: visible;
+}
+  #button {
+    margin: 30px;
+  }
+}
 @media screen and (max-width:320px){
 	.checkbox {float: none; text-align: left; position: relative; width: 100%; margin: 30px 0 0 0;}
 	.sidebarhome li{ width:50% /*25%*/; float:left;}
